# Data-Structures

./: BST.c  BST.h  CMakeLists.txt  Double list.h  README.md  binary serch tree.c  doubleListsTest_main.c  double_Sorted_linked_list.c  double_Sorted_linked_list.h  double_linked_ list.c  double_linked_list.c  double_linked_list.h  linked_list.c  linked_list.h  linked_queue.c  linked_queue.h  linked_queue_list.c  linked_queue_list.h  linked_stack.c  linked_stack.h  list_based_array.c  list_based_array.h  main.c  queue.c  queue.h  stack.c  stack.h
